# cwe-client-cli

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  flake.nix  result
src/: app.rs  main.rs
src/app/: mod.rs
src/base/: check.rs  config.rs  contact.rs  filesystem.rs  mod.rs  passphrase.rs  prepare.rs  uuid.rs
src/command/: clear.rs  del.rs  export.rs  get.rs  help.rs  history.rs  import.rs  info.rs  mod.rs  send.rs
src/modules/: config.rs  crypting.rs  json.rs  mod.rs  network.rs
src/modules/crypting/: aes_256.rs  base.rs  mod.rs  rsa.rs
src/sys/: mod.rs
src/sys/files/: core.rs  mod.rs
src/sys/network/: base.rs  core.rs  json.rs  mod.rs
