[package]
name = "cwe-client-cli"
version = "0.2.0"
description = "Desktop CLI client for cwe"
authors = ["icelayer"]
license = ""
repository = ""
default-run = "cwe-client-cli"
edition = "2021"
rust-version = "1.78"

[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1.10.0", features = ["v4", "js"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
openssl = "0.10.66"
colored = "2.1.0"
rpassword = "7.3"
directories = "5.0.1"
